# Lazo-TakeHome

./: .env.example  .gitignore  Copia de Prueba técnica — Fullstack Engineer.md  DECISIONS.md  Decisions.md  Propuesta-de-trabajo.txt  README.md  deep-research-report-lazo.md  pyproject.toml  vercel.json
api/: index.py
backend/: __init__.py  alembic.ini  pyproject.toml  server.py
backend/alembic/: env.py
backend/alembic/versions/: 20260702_0001_create_obligations.py
backend/app/: main.py  requirements.txt
backend/app/api/: errors.py  index.py  obligations.py  schemas.py
backend/app/application/: presenters.py  use_cases.py
backend/app/config/: settings.py
backend/app/domain/: date_rules.py  exceptions.py  obligations.py  policies.py  transition_view.py  update_invariants.py
backend/docs/: api_review.md  openapi.json  postman_collection.json
backend/tests/api/: test_health.py  test_obligation_routes.py  test_openapi_contract.py  test_schema_validation.py
backend/tests/config/: test_settings.py
backend/tests/domain/: test_document_gate.py  test_due_flags.py  test_status_transitions.py  test_transition_view.py  test_update_invariants.py
backend/tests/security/: test_tax_id.py
frontend/: .env.example  README.md  components.json  package-lock.json  package.json  vitest.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/shared/ui/: card.tsx  (+13 more)
specs/features/backend-obligations/: functional-spec.json  technical-spec.json  todos.json
specs/features/frontend-obligations/: functional-spec.json  technical-spec.json  todos.json
(+43 files in other folders)
