[project]
name = "lazo-vercel-backend"
version = "0.1.0"
description = "Vercel deployment entrypoint for the Lazo FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "cryptography>=42.0.0"
]

[tool.vercel]
entrypoint = "backend.server:app"
